nivasa-macros/tests/trybuild/validation_max_malformed.stderr
error: expected `#[max(<number>)]`
 --> tests/trybuild/validation_max_malformed.rs:5:5
  |
5 |     #[max("five")]
  |     ^
